# larapy

./: .env.example  .gitignore  LICENSE  README.md  artisan  pyproject.toml
app/http/controllers/: home_controller.py
app/models/: user.py
config/: app.py  database.py  encryption.py  exceptions.py  filesystems.py  hashing.py  logging.py  mail.py  queue.py  ratelimiting.py
database/: database.sqlite
database/migrations/: 2024_01_01_000001_create_users_table.py  2024_01_01_000002_create_password_resets_table.py  2024_01_01_000003_create_email_verifications_table.py  2024_01_01_000004_create_personal_access_tokens_table.py  2024_01_02_000001_create_jobs_table.py  2024_01_02_000002_create_failed_jobs_table.py  2024_01_02_000003_create_job_batches_table.py
database/seeders/: TestFactory.py
lang/en/: auth.json  messages.json  validation.json
lang/es/: messages.json  validation.json
lang/fr/: messages.json
resources/views/auth/: login.blade.py  register.blade.py  verify.blade.py
resources/views/auth/passwords/: email.blade.py  reset.blade.py
resources/views/emails/: password-reset.blade.py  verify-email.blade.py
routes/: api.py  web.py
